--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hexo-generator-index": "^0.2.1",
     "hexo-generator-search": "^2.4.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-helper-live2d": "^3.1.1",
     "hexo-pdf": "^1.1.1",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-marked": "^2.0.0",
