--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render: "doc/rootdoc/*"
+skip_render: "attachments/*" 
 
 # Writing
 new_post_name: :title.md # File name of new posts
