--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 科技改变世界
-subtitle:
-description:
-keywords:
+title: 星光荡开宇宙
+subtitle: 科学闪耀其中
+description: "我就像在海边玩耍的小孩,偶尔拾到美丽的贝壳,就高兴不已。但面对真理海洋,我仍一无所知。"
+keywords: 科学，解析，算法，探索，未来
 author: 远方
 language: zh_CN
 timezone:
